Redesign zapas platform
